# ili9163c_simulator

./: Cargo.toml  Readme.md
examples/: basic.rs
src/: graphics.rs  lib.rs  pin.rs
