[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
name = "ili9163c_simulator"
version = "0.1.0"

[dependencies]
image = "0.10.3"
piston_window = "0.57.0"

[dependencies.ili9163c]
git = "https://github.com/gyscos/ili9163c"

[dependencies.gpio_traits]
git = "https://github.com/gyscos/gpio_traits"
